--- a/res/layout/activity_key_life_planner__main.xml
+++ b/res/layout/activity_key_life_planner__main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundColor"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,27 +10,38 @@
     tools:context=".KeyLifePlanner_Main" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/welcome" />
-    
-    <Button
-         android:id="@+id/calendarActivity"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:text="@string/CalendarButtonLabel"
-         />
 
-     <Button
-         android:id="@+id/viewAvatar"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
-        android:text="@string/AvatarButtonLabel"
-         />
+    <Button
+        android:id="@+id/viewAvatar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignLeft="@+id/viewAchievements"
+        android:layout_below="@+id/viewAchievements"
+        android:layout_marginTop="14dp"
+        android:background="@color/AvatarButtonColor"
+        android:text="@string/AvatarButtonLabel" />
+
+    <Button
+        android:id="@+id/calendarActivity"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:background="@color/CalendarButtonColor"
+        android:text="@string/CalendarButtonLabel" />
+
+    <Button
+        android:id="@+id/viewAchievements"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignLeft="@+id/calendarActivity"
+        android:layout_below="@+id/calendarActivity"
+        android:layout_marginTop="15dp"
+        android:background="@color/AchievementsButtonColor"
+        android:text="@string/AchievementsButtonLabel" />
+
 </RelativeLayout>
