--- a/res/layout/activity_avatar.xml
+++ b/res/layout/activity_avatar.xml
@@ -13,5 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Avatar" />
+    
+   <ImageView
+	    android:layout_width="wrap_content"
+	    android:layout_height="100dp" 
+	    android:layout_marginTop="40dp"
+	    android:layout_marginLeft="100dp"
+	    android:layout_marginRight="100dp"
+	    
+	    android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
