--- a/res/layout/activity_key_life_planner__main.xml
+++ b/res/layout/activity_key_life_planner__main.xml
@@ -16,7 +16,7 @@
         android:text="@string/welcome" />
 
     <Button
-        android:id="@+id/viewAvatar"
+        android:id="@+id/avatarActivity"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignLeft="@+id/viewAchievements"
@@ -43,5 +43,14 @@
         android:layout_marginTop="15dp"
         android:background="@color/AchievementsButtonColor"
         android:text="@string/AchievementsButtonLabel" />
+    
+     <ImageView
+	    android:layout_width="wrap_content"
+	    android:layout_height="100dp" 
+	    android:layout_marginTop="250dp"
+	    android:layout_marginLeft="100dp"
+	    android:layout_marginRight="100dp"
+	    
+	    android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
