--- a/res/layout/activity_key_life_planner__main.xml
+++ b/res/layout/activity_key_life_planner__main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".KeyLifePlanner_Main" >
 
     <TextView
@@ -16,41 +17,31 @@
         android:text="@string/welcome" />
 
     <Button
-        android:id="@+id/avatarActivity"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignLeft="@+id/viewAchievements"
-        android:layout_below="@+id/viewAchievements"
-        android:layout_marginTop="14dp"
-        android:background="@color/AvatarButtonColor"
-        android:text="@string/AvatarButtonLabel" />
-
-    <Button
         android:id="@+id/calendarActivity"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:background="@color/CalendarButtonColor"
-        android:text="@string/CalendarButtonLabel" />
-
-    <Button
+        android:background="@drawable/greenbutton" style="@style/ButtonText"
+        android:text="@string/CalendarButtonLabel"
+        android:drawableRight="@drawable/calendar" 
+        android:paddingRight="40dp"
+        android:drawablePadding="-40dp"/>
+    
+     <Button
         android:id="@+id/viewAchievements"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_alignLeft="@+id/calendarActivity"
-        android:layout_below="@+id/calendarActivity"
-        android:layout_marginTop="15dp"
-        android:background="@color/AchievementsButtonColor"
-        android:text="@string/AchievementsButtonLabel" />
+        android:background="@drawable/yellowbutton" style="@style/ButtonText"
+        android:text="@string/AchievementsButtonLabel"
+        android:drawableRight="@drawable/star" 
+        android:paddingRight="20dp"
+        android:drawablePadding="-20dp"/>
     
-     <ImageView
-	    android:layout_width="wrap_content"
-	    android:layout_height="100dp" 
-	    android:layout_marginTop="250dp"
-	    android:layout_marginLeft="100dp"
-	    android:layout_marginRight="100dp"
-	    
-	    android:src="@drawable/ic_launcher" />
+     <Button
+        android:id="@+id/viewAvatar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/bluebutton" style="@style/ButtonText"
+        android:text="@string/AvatarButtonLabel" />
 
-</RelativeLayout>
+</LinearLayout>
