--- a/res/drawable/bluebutton.xml
+++ b/res/drawable/bluebutton.xml
@@ -5,8 +5,8 @@
             <solid
                 android:color="#449def" />
             <stroke
-                android:width="1dp"
-                android:color="#2f6699" />
+                android:width="4dp"
+                android:color="#000000" />
             <corners
                 android:radius="3dp" />
             <padding
@@ -23,8 +23,8 @@
                 android:endColor="#2f6699"
                 android:angle="270" />
             <stroke
-                android:width="1dp"
-                android:color="#2f6699" />
+                android:width="4dp"
+                android:color="#000000" />
             <corners
                 android:radius="4dp" />
             <padding
