--- a/res/drawable/greenbutton.xml
+++ b/res/drawable/greenbutton.xml
@@ -5,8 +5,8 @@
             <solid
                 android:color="#70c656" />
             <stroke
-                android:width="1dp"
-                android:color="#53933f" />
+                android:width="4dp"
+                android:color="#000000" />
             <corners
                 android:radius="3dp" />
             <padding
@@ -23,8 +23,8 @@
                 android:endColor="#53933f"
                 android:angle="270" />
             <stroke
-                android:width="1dp"
-                android:color="#53933f" />
+                android:width="4dp"
+                android:color="#000000" />
             <corners
                 android:radius="4dp" />
             <padding
