--- a/res/drawable/yellowbutton.xml
+++ b/res/drawable/yellowbutton.xml
@@ -5,8 +5,8 @@
             <solid
                 android:color="#f3ae1b" />
             <stroke
-                android:width="1dp"
-                android:color="#bb6008" />
+                android:width="4dp"
+                android:color="#000000" />
             <corners
                 android:radius="3dp" />
             <padding
@@ -23,8 +23,8 @@
                 android:endColor="#F1E904"
                 android:angle="270" />
             <stroke
-                android:width="1dp"
-                android:color="#CDC602" />
+                android:width="4dp"
+                android:color="#000000" />
             <corners
                 android:radius="4dp" />
             <padding
