--- a/res/layout/activity_calendar_view.xml
+++ b/res/layout/activity_calendar_view.xml
@@ -1,13 +1,72 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/CalendarButtonColor"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/CalendarBackgroundColor"
+    android:orientation="vertical"
     tools:context=".CalendarView" >
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/CalendarBackgroundColor"
+        android:orientation="horizontal">
+        
+    <Button
+        android:id="@+id/sunday"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/activeday"
+        android:text="@string/SundayLabel"
+        android:textSize="12sp" />
+
+    <Button
+        android:id="@+id/monday"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/inactiveday"
+        android:text="@string/MondayLabel"
+        android:textSize="12sp" />
+
+    <Button
+        android:id="@+id/tuesday"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/inactiveday"
+        android:text="@string/TuesdayLabel"
+        android:textSize="12sp" />
+    
+    <Button
+        android:id="@+id/wednesday"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/inactiveday"
+        android:text="@string/WednesdayLabel"
+        android:textSize="12sp" />
+
+    <Button
+        android:id="@+id/thursday"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/inactiveday"
+        android:text="@string/ThursdayLabel" 
+        android:textSize="12sp"/>
+     <Button
+        android:id="@+id/friday"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/inactiveday"
+        android:text="@string/FridayLabel"
+        android:textSize="12sp" />
+     <Button
+        android:id="@+id/saturday"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/inactiveday"
+        android:text="@string/SaturdayLabel"
+        android:textSize="12sp" />
+     
+    </LinearLayout>
     
     <EditText
         android:id="@+id/taskname"
@@ -24,78 +83,15 @@
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
-         android:layout_below="@+id/taskname"
-         
+         android:layout_below="@+id/taskname"        
          android:entries="@array/task_types" />
-
+    
     <Button
-        android:id="@+id/sunday"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        
-        android:layout_alignParentTop="true"
-        android:background="@color/AddTaskButtonColor"
-        android:text="@string/SundayLabel" />
-
-    <Button
-        android:id="@+id/wednesday"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        
-        android:layout_toRightOf="@+id/tuesday"
-        android:background="@color/AddTaskButtonColor"
-        android:text="@string/WednesdayLabel" />
-
-    <Button
-        android:id="@+id/tuesday"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        android:layout_toRightOf="@+id/monday"
-        android:background="@color/AddTaskButtonColor"
-        android:text="@string/TuesdayLabel" />
-
-    <Button
-        android:id="@+id/monday"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        
-        android:layout_toRightOf="@+id/sunday"
-        android:background="@color/AddTaskButtonColor"
-        android:text="@string/MondayLabel" />
-
-    <Button
-        android:id="@+id/thursday"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        
-        android:layout_toRightOf="@+id/wednesday"
-        android:background="@color/AddTaskButtonColor"
-        android:text="@string/ThursdayLabel" />
-     <Button
-        android:id="@+id/friday"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        
-        android:layout_toRightOf="@+id/thursday"
-        android:background="@color/AddTaskButtonColor"
-        android:text="@string/FridayLabel" />
-     <Button
-        android:id="@+id/saturday"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        
-        android:layout_toRightOf="@+id/friday"
-        android:background="@color/AddTaskButtonColor"
-        android:text="@string/SaturdayLabel" />
-
-     <Button
          android:id="@+id/addtask"
          android:layout_width="60dp"
          android:layout_height="60dp"
-         android:layout_alignRight="@+id/saturday"
-         android:layout_below="@+id/friday"
          android:layout_marginTop="20dp"
          android:background="@color/AddTaskButtonColor"
          android:text="@string/AddButtonLabel" />
 
-</RelativeLayout>
+</LinearLayout>
