--- a/res/drawable/inactiveday.xml
+++ b/res/drawable/inactiveday.xml
@@ -3,25 +3,23 @@
     <item android:state_pressed="true" >
         <shape>
             <gradient
-                android:startColor="#B0F29D"
+                android:startColor="#579942"
                 android:endColor="#70c656"
                 android:angle="270" />
             <stroke
-                android:width="4dp"
+                android:width="1dp"
                 android:color="#70c656" />
-            <corners
-                android:radius="4dp" />
         </shape>
     </item>
     <item>
         <shape>
             <gradient
-                android:startColor="#E3E9E1"
-                android:endColor="#C4CBC2"
+                android:startColor="#ffffff"
+                android:endColor="#949494"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#000000" />
+                android:color="#ffffff" />
             <padding
                 android:left="0dp"
                 android:top="0dp"
