--- a/res/layout/activity_calendar_view.xml
+++ b/res/layout/activity_calendar_view.xml
@@ -9,62 +9,67 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/CalendarBackgroundColor"
+        android:background="@color/white"
         android:orientation="horizontal">
         
     <Button
         android:id="@+id/sunday"
         android:layout_width="52dp"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:background="@drawable/activeday"
         android:text="@string/SundayLabel"
-        android:textSize="12sp" />
-
+        android:textSize="16sp" />
     <Button
         android:id="@+id/monday"
         android:layout_width="52dp"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/MondayLabel"
-        android:textSize="12sp" />
+        android:textSize="16sp"
+        android:textColor="@color/white"  />
 
     <Button
         android:id="@+id/tuesday"
         android:layout_width="52dp"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/TuesdayLabel"
-        android:textSize="12sp" />
+        android:textSize="16sp"
+        android:textColor="@color/white"  />
     
     <Button
         android:id="@+id/wednesday"
         android:layout_width="52dp"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/WednesdayLabel"
-        android:textSize="12sp" />
+        android:textSize="16sp"
+        android:textColor="@color/white"  />
 
     <Button
         android:id="@+id/thursday"
         android:layout_width="52dp"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/ThursdayLabel" 
-        android:textSize="12sp"/>
+        android:textSize="16sp"
+        android:textColor="@color/white" />
      <Button
         android:id="@+id/friday"
         android:layout_width="52dp"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/FridayLabel"
-        android:textSize="12sp" />
+        android:textSize="16sp" 
+        android:textColor="@color/white" />
      <Button
         android:id="@+id/saturday"
         android:layout_width="52dp"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/SaturdayLabel"
-        android:textSize="12sp" />
+        android:textSize="16sp" 
+        android:textColor="@color/white" />
      
     </LinearLayout>
     
@@ -74,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="66dp"
         android:layout_marginLeft="20dp"
-        android:background="@color/TextFieldColor"
+        android:background="@color/white"
         android:ems="10"
         android:imeOptions="actionDone"
         android:inputType="text" />
@@ -82,8 +87,7 @@
          android:id="@+id/task_spinner"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
-         android:layout_marginLeft="20dp"
-         android:layout_below="@+id/taskname"        
+         android:layout_marginLeft="20dp"      
          android:entries="@array/task_types" />
     
     <Button
