Fixed UI a bit - add task button doesn't work

--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,21 +6,22 @@
     android:orientation="vertical"
     tools:context=".CalendarView" >
     
-    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         
     <Button
         android:id="@+id/sunday"
-        android:layout_width="45dp"
+        android:layout_width="51dp"
         android:layout_height="40dp"
-       
         android:background="@drawable/activeday"
         android:text="@string/SundayLabel"
         android:textSize="16sp" />
     <Button
         android:id="@+id/monday"
-        android:layout_width="45dp"
+        android:layout_width="51dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="45dp"
         android:background="@drawable/inactiveday"
         android:text="@string/MondayLabel"
         android:textSize="16sp"
@@ -28,19 +29,17 @@
 
     <Button
         android:id="@+id/tuesday"
-        android:layout_width="45dp"
+        android:layout_width="51dp"
         android:layout_height="40dp"
         android:background="@drawable/inactiveday"
-        android:layout_marginLeft="90dp"
         android:text="@string/TuesdayLabel"
         android:textSize="16sp"
         android:textColor="@color/white"  />
     
     <Button
         android:id="@+id/wednesday"
-        android:layout_width="45dp"
+        android:layout_width="51dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="135dp"
         android:background="@drawable/inactiveday"
         android:text="@string/WednesdayLabel"
         android:textSize="16sp"
@@ -48,48 +47,43 @@
 
     <Button
         android:id="@+id/thursday"
-        android:layout_width="45dp"
+        android:layout_width="51dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="180dp"
         android:background="@drawable/inactiveday"
         android:text="@string/ThursdayLabel" 
         android:textSize="16sp"
         android:textColor="@color/white" />
      <Button
         android:id="@+id/friday"
-        android:layout_width="45dp"
+        android:layout_width="51dp"
         android:layout_height="40dp"
         android:background="@drawable/inactiveday"
-        android:layout_marginLeft="225dp"
         android:text="@string/FridayLabel"
         android:textSize="16sp" 
         android:textColor="@color/white" />
      <Button
         android:id="@+id/saturday"
-        android:layout_width="45dp"
+        android:layout_width="51dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="270dp"
         android:background="@drawable/inactiveday"
         android:text="@string/SaturdayLabel"
         android:textSize="16sp" 
         android:textColor="@color/white" />
+</LinearLayout>
 
     <Button
         android:id="@+id/addtask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/saturday"
-        android:layout_below="@+id/friday"
-        android:layout_marginTop="28dp"
-        android:background="@color/AddTaskButtonColor"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:background="@drawable/addtaskbutton"
         android:text="@string/AddButtonLabel" />
     
     <ListView 
         android:id="@+id/task_list"
         android:layout_below="@+id/addtask"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        
-    />
+        android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+</LinearLayout>
