Revert "Updated main with new calendar icon"
This reverts commit 5fe71b42df6ccb51c325d4baf8e652b8e89ee601.

--- a/res/layout/activity_key_life_planner__main.xml
+++ b/res/layout/activity_key_life_planner__main.xml
@@ -22,7 +22,7 @@
         android:layout_height="60dp"
         android:background="@drawable/greenbutton" style="@style/ButtonText"
         android:text="@string/CalendarButtonLabel"
-        android:drawableRight="@drawable/calendar2" 
+        android:drawableRight="@drawable/calendar" 
         android:paddingRight="40dp"
         android:drawablePadding="-40dp"/>
     
