--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -13,14 +13,15 @@
         
     <Button
         android:id="@+id/sunday"
-        android:layout_width="51dp"
+        android:layout_width="52dp"
         android:layout_height="40dp"
         android:background="@drawable/activeday"
         android:text="@string/SundayLabel"
-        android:textSize="16sp" />
+        android:textSize="16sp" 
+        android:textColor="@color/white"/>
     <Button
         android:id="@+id/monday"
-        android:layout_width="51dp"
+        android:layout_width="52dp"
         android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/MondayLabel"
@@ -29,7 +30,7 @@
 
     <Button
         android:id="@+id/tuesday"
-        android:layout_width="51dp"
+        android:layout_width="52dp"
         android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/TuesdayLabel"
@@ -38,7 +39,7 @@
     
     <Button
         android:id="@+id/wednesday"
-        android:layout_width="51dp"
+        android:layout_width="52dp"
         android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/WednesdayLabel"
@@ -47,7 +48,7 @@
 
     <Button
         android:id="@+id/thursday"
-        android:layout_width="51dp"
+        android:layout_width="52dp"
         android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/ThursdayLabel" 
@@ -55,7 +56,7 @@
         android:textColor="@color/white" />
      <Button
         android:id="@+id/friday"
-        android:layout_width="51dp"
+        android:layout_width="52dp"
         android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/FridayLabel"
@@ -63,7 +64,7 @@
         android:textColor="@color/white" />
      <Button
         android:id="@+id/saturday"
-        android:layout_width="51dp"
+        android:layout_width="52dp"
         android:layout_height="40dp"
         android:background="@drawable/inactiveday"
         android:text="@string/SaturdayLabel"
@@ -74,11 +75,13 @@
     <Button
         android:id="@+id/addtask"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:gravity="center"
         android:layout_margin="10dp"
+        android:textSize="30sp"
         android:background="@drawable/addtaskbutton"
-        android:text="@string/AddButtonLabel" />
+        android:text="@string/AddButtonLabel"
+        android:textColor="#818181"  />
     
     <ListView 
         android:id="@+id/task_list"
