--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="6dip"
+        android:focusable="false"
         android:src="@drawable/calendar"/>
     
         
@@ -19,12 +20,15 @@
             android:gravity="center"
             android:textColor="#0099CC"
             android:textIsSelectable="true"
+            android:focusable="false"
             />
      <TextView
          android:id="@+id/timedue"
+         
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:focusable="false"
             android:textColor="#0099CC"
             android:textIsSelectable="true"
             />
