--- a/res/layout/activity_add_task.xml
+++ b/res/layout/activity_add_task.xml
@@ -11,23 +11,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:text="@string/addtasklabel"
         android:textSize="60sp" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:gravity="center" >
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/namelabel"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/namelabel"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:gravity="right" />
 
         <EditText
             android:id="@+id/taskname"
@@ -44,18 +45,19 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:gravity="center"  >
+        android:layout_marginTop="10dp"  >
 
         <TextView
             android:id="@+id/category_label"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/categorylabel" 
             android:textSize="20sp"
-            android:gravity="center_vertical"/>
+            android:gravity="right"/>
 
         <Spinner
             android:id="@+id/task_spinner"
@@ -66,17 +68,19 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"  >
+        android:orientation="horizontal"        
+        android:gravity="center_vertical"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/dueby_label"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/duebylabel" 
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:gravity="right"/>
 
         <Spinner
             android:id="@+id/day"
@@ -97,6 +101,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/greenbutton"
         android:text="@string/SubmitButtonLabel" 
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:textSize="25sp" />
 
 </LinearLayout>
