--- a/res/layout/activity_key_life_planner__main.xml
+++ b/res/layout/activity_key_life_planner__main.xml
@@ -3,45 +3,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/KeyLimeBackgroundColor"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".KeyLifePlanner_Main" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <ImageView
+        android:id="@+id/keylifeplanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/welcome" />
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/keylifeplanner" />
 
     <Button
         android:id="@+id/calendarActivity"
+        style="@style/ButtonText"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/greenbutton" style="@style/ButtonText"
-        android:text="@string/CalendarButtonLabel"
-        android:drawableRight="@drawable/calendarmain" 
+        android:background="@drawable/greenbutton"
+        android:drawablePadding="-50dp"
+        android:drawableRight="@drawable/calendarmain"
         android:paddingRight="40dp"
-        android:drawablePadding="-50dp"/>
-    
-     <Button
+        android:text="@string/CalendarButtonLabel" />
+
+    <Button
         android:id="@+id/viewAchievements"
+        style="@style/ButtonText"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/yellowbutton" style="@style/ButtonText"
-        android:text="@string/AchievementsButtonLabel"
-        android:drawableRight="@drawable/star" 
+        android:background="@drawable/yellowbutton"
+        android:drawablePadding="-20dp"
+        android:drawableRight="@drawable/star"
         android:paddingRight="20dp"
-        android:drawablePadding="-20dp"/>
-    
-     <Button
+        android:text="@string/AchievementsButtonLabel" />
+
+    <Button
         android:id="@+id/viewAvatar"
+        style="@style/ButtonText"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="14dp"
-        android:background="@drawable/bluebutton" style="@style/ButtonText"
+        android:background="@drawable/bluebutton"
         android:text="@string/AvatarButtonLabel" />
+
+    <ImageView
+        android:id="@+id/bunnyblue"
+        android:layout_width="148dp"
+        android:layout_height="195dp"
+        android:layout_gravity="center"
+        android:src="@drawable/bunnyblue" />
 
 </LinearLayout>
