--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:padding="10dp"
+    android:orientation="horizontal"
+    android:background="@drawable/tasklistview" >
     
     <ImageView 
         android:id="@+id/taskimage"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:focusable="false"
+        android:padding="10dp"
+        android:layout_gravity="center_horizontal"
+        />
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="6dip"
-        android:focusable="false"
-        />
-    
-        
+        android:orientation="vertical"
+        android:paddingLeft="5dp">
+     
      <TextView 
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="#0099CC"
+            android:layout_gravity="left"
+            android:textColor="#000000"
             android:textIsSelectable="true"
             android:focusable="false"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:typeface="sans"
             />
      <TextView
          android:id="@+id/timedue"
-         
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:focusable="false"
-            android:textColor="#0099CC"
+            android:textColor="#000000"
             android:textIsSelectable="true"
+            android:textSize="15sp"
+            android:padding="-25dp"
+            android:typeface="monospace"
             />
-    
+    </LinearLayout>
 </LinearLayout>
