--- a/res/drawable/tasklistview.xml
+++ b/res/drawable/tasklistview.xml
@@ -7,11 +7,11 @@
                 android:endColor="#949494"
                 android:angle="270" />
             <stroke
-                android:width="1dp"
-                android:color="#ffffff" />
+                android:width="6dp"
+                android:color="#70c656" />
             <padding
                 android:left="0dp"
-                android:top="0dp"
+                android:top="5dp"
                 android:right="0dp"
                 android:bottom="0dp" />
             <corners
