--- a/res/layout/achievementitem.xml
+++ b/res/layout/achievementitem.xml
@@ -2,23 +2,26 @@
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
-     android:orientation="vertical" >
+     android:orientation="horizontal"
+     android:padding="20dp" >
      
      <ImageView 
          android:id="@+id/achievementimage"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="6dip"
+         android:tint = "#808080"
          android:src="@drawable/star"
          />
      
          
       <TextView 
              android:id="@+id/achievedescription"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
+             android:layout_width="250dp"
+             android:layout_height="50dp"
              android:gravity="center"
-             android:textColor="#0099CC"
+             android:textColor="#000000"
+             android:textSize="14sp"
              android:textIsSelectable="true"
              />
       
