--- a/res/layout/activity_achievement.xml
+++ b/res/layout/activity_achievement.xml
@@ -2,29 +2,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#FEFF87"
+    android:orientation="vertical"
     tools:context=".AchievementActivity" >
 
-    <TextView
-        android:id="@+id/achievementheading"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:textSize="40sp"
-        android:text="@string/AchievementsButtonLabel">     
-    </TextView>
-    
-    <ListView 
-        android:layout_marginTop="20dp"
+        android:orientation="horizontal" 
+        android:padding="3sp">
+
+        <TextView
+            android:id="@+id/achievementheading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="top"
+            android:text="@string/AchievementsButtonLabel"
+            android:textSize="40sp" >
+        </TextView>
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:src="@drawable/star" />
+    </LinearLayout>
+
+    <ListView
         android:id="@+id/achievementlist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginTop="20dp"
         android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false"
-        
-    />
+        android:headerDividersEnabled="false" />
 
 </LinearLayout>
