--- a/res/layout/activity_avatar.xml
+++ b/res/layout/activity_avatar.xml
@@ -1,44 +1,57 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/KeyLimeBackgroundColor"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+	android:orientation="vertical"
     tools:context=".AvatarActivity" >
+    <TextView
+        android:id="@+id/avatar_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:text="@string/title_activity_avatar"
+        android:textSize="50sp" />
 
     <ImageView
         android:id="@+id/avatar"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
-        android:src="@drawable/ic_launcher" />
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/bluebunny" 
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/wallet"
+        android:layout_marginTop="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/avatar" />
+        android:layout_gravity="center" />
 
     <Button
         android:id="@+id/store"
+        android:text="@string/title_store"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/wallet" />
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:layout_below="@+id/wallet" 
+        android:background="@drawable/addtaskbutton"
+        android:textSize="30sp"
+        style="@style/ButtonText"
+        />
 
     <GridView
         android:id="@+id/gridview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@+id/store"
-        android:columnWidth="90dp"
+        android:columnWidth="100dp"
         android:gravity="center"
         android:horizontalSpacing="10dp"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp" />
 
-</RelativeLayout>
+</LinearLayout>
