--- a/res/layout/activity_key_life_planner__main.xml
+++ b/res/layout/activity_key_life_planner__main.xml
@@ -50,6 +50,6 @@
         android:layout_width="148dp"
         android:layout_height="195dp"
         android:layout_gravity="center"
-        android:src="@drawable/bunnyblue" />
+        android:src="@drawable/bluebunny" />
 
 </LinearLayout>
