--- a/res/layout/activity_store.xml
+++ b/res/layout/activity_store.xml
@@ -1,16 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/KeyLimeBackgroundColor"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AvatarActivity" >
 
     <TextView
+        android:id="@+id/store_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:text="@string/title_store"
+        android:textSize="60sp" />
+
+    <TextView
         android:id="@+id/wallet"
+        android:padding="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -21,9 +28,9 @@
         android:layout_height="fill_parent"
         android:columnWidth="90dp"
         android:gravity="center"
-        android:horizontalSpacing="10dp"
+        android:horizontalSpacing="5dp"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp" />
+        android:verticalSpacing="50dp" />
 
-</RelativeLayout>
+</LinearLayout>
