--- a/res/layout/activity_avatar.xml
+++ b/res/layout/activity_avatar.xml
@@ -2,15 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/KeyLimeBackgroundColor"
-	android:orientation="vertical"
+    android:background="#86C1F8"
+    android:orientation="vertical"
     tools:context=".AvatarActivity" >
+
     <TextView
         android:id="@+id/avatar_banner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:text="@string/title_activity_avatar"
         android:textSize="50sp" />
 
@@ -18,29 +19,41 @@
         android:id="@+id/avatar"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
+        android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:src="@drawable/bluebunny" 
-        android:layout_gravity="center"/>
+        android:src="@drawable/bluebunny" />
 
-    <TextView
-        android:id="@+id/wallet"
-        android:layout_marginTop="3dp"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_height="20dp"
+        android:layout_gravity="left"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:src="@drawable/coin" />
+
+        <TextView
+            android:id="@+id/wallet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/store"
-        android:text="@string/title_store"
+        style="@style/ButtonText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_below="@+id/wallet"
         android:layout_margin="10dp"
-        android:layout_below="@+id/wallet" 
         android:background="@drawable/addtaskbutton"
-        android:textSize="30sp"
-        style="@style/ButtonText"
-        />
+        android:gravity="center"
+        android:text="@string/title_store"
+        android:textSize="30sp" />
 
     <GridView
         android:id="@+id/gridview"
