--- a/res/layout/activity_store.xml
+++ b/res/layout/activity_store.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/KeyLimeBackgroundColor"
+    android:background="#86C1F8"
     tools:context=".AvatarActivity" >
 
     <TextView
@@ -14,16 +14,30 @@
         android:layout_marginTop="30dp"
         android:text="@string/title_store"
         android:textSize="60sp" />
-
-    <TextView
-        android:id="@+id/wallet"
-        android:padding="20dp"
+<LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:paddingTop="5dp"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:src="@drawable/coin" />
+
+        <TextView
+            android:id="@+id/wallet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom" />
+    </LinearLayout>
 
     <GridView
         android:id="@+id/gridview"
-        android:layout_below="@+id/wallet"
+		android:paddingTop="10dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:columnWidth="90dp"
